TC-105 fixed width on mobile version

--- a/assets/css/questionanswer.css
+++ b/assets/css/questionanswer.css
@@ -447,6 +447,7 @@ ul.yiiPager .selected a {
   }
 
   .media>.pull-left {
-    margin-right: 25px;
+    margin-right: 18px;
+    width: 100%;
   }
 }
